# curly-engine-blog

./: .gitignore  FRONTEND_INTEGRATION_GUIDE.md  LICENSE  PLATFORM_ANALYSIS.md  PROGRESS.md  README.md  blog.md
backend/: .env  .env.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  DATABASE_SETUP.md  PRODUCTION_SETUP.md  README.md  conftest.py  db.sqlite3  locustfile.py  pytest.ini  setup.cfg  test_media_upload.py
backend/apps/accounts/: admin.py  billing.py  context_processors.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py  webhooks.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/analytics/: admin.py  models.py  urls.py  views.py
backend/apps/analytics/migrations/: 0001_initial.py
backend/apps/articles/: admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/apps/articles/migrations/: 0001_initial.py  0002_add_account_fields.py  0002_initial.py  0003_populate_account_field.py  0004_populate_author_field.py  0005_article_author_article_hero_image_article_topic_and_more.py  0006_articleannotation_articlereaction_breakingnews_and_more.py  0007_collaborativesession_sessionparticipant_and_more.py
backend/apps/content_analysis/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/apps/media/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/newsletter/: admin.py  email_service.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/seo/: admin.py  models.py  urls.py  views.py
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  urls_auth.py  urls_register.py  validators.py  views.py
backend/config/: asgi.py  celery.py  settings.py  urls.py
backend/content_analysis/: apps.py
backend/requirements/: base.txt  development.txt  production.txt  test.txt
backend/templates/auth/: 403_csrf_failure.html  email_verification.html  email_verification.txt
backend/templates/newsletter/: confirmation_email.html  confirmation_email.txt
(+118 files in other folders)
