[metadata]
name = galx-backend
version = 1.0.0
description = Enterprise SAAS Editorial Platform Backend
author = GALX Team
author_email = team@galx.com
license = MIT

[tool:black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = \.pyi?$
extend-exclude = (migrations/|migrations\.py)$

[tool:isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = ['apps', 'config']
skip_glob = ['**/migrations/**']

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    migrations,
    node_modules,
    .venv,
    venv,
    env,
    .env,
    .tox,
    .pytest_cache,
    .mypy_cache,
    .eggs,
    *.egg,
per-file-ignores =
    # Tests can use magic values, assertions, and imports from parent directories
    tests/*:S101, WPS229, WPS218, WPS420, WPS430, S104
    */conftest.py:S101, WPS229, WPS218, WPS420, WPS430, S104

[bandit]
exclude_dirs = ["tests", "migrations", "node_modules"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage in tests

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
disallow_any_generics = True
disallow_any_unimported = True
disallow_subclassing_any = True

[[tool:mypy.overrides]]
module = [
    "rest_framework.*",
    "corsheaders.*",
    "csp.*",
    "django_filters.*",
    "storages.*",
    "resend.*",
    "psycopg2.*",
    "boto3.*",
    "PIL.*",
    "markdown.*",
    "bleach.*",
    "factory_boy.*",
    "faker.*",
]
ignore_missing_imports = True

[tool:radon]
exclude = "tests/*,migrations/*"

[tool:xenon]
max-average = A
max-modules = A
max-absolute = A
include = ["apps"]
exclude = ["migrations", "tests"]
